[metadata]
name = atf-engine
version = 0.0.5

url = https://github.com/osprey-dcs/atf-engine
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license = BSD

[options]
zip_safe = False
python_requires = >=3.11
install_requires =
  p4p
  inotify~=0.2

packages =
    atf_engine

[options.package_data]
* = *.cpp
